--- a/ToDoReminder/src/main/res/values/strings.xml
+++ b/ToDoReminder/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <string name="app_name">ToDo Reminder</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">History</string>
+    <string name="title_section2">ToDo</string>
+    <string name="title_section3">Add</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
