--- a/ToDoReminder/src/main/res/values/strings.xml
+++ b/ToDoReminder/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_section3">Add</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="save_button">Save</string>
 
 </resources>
