--- a/ToDoReminder/src/main/res/values/strings.xml
+++ b/ToDoReminder/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="action_settings">Settings</string>
     <string name="save_button">Save</string>
     <string name="empty_list_text">No ToDo</string>
+    <string name="checkNotif">Notification</string>
 
 </resources>
